@@ -178,14 +178,28 @@ command:
     all: "todos os seus"
     description: "Aposte seus tokens em um jogo de cassino! Totalmente não roubado, confie em mim"
 
+  achievements:
+    noAchievements: "Não há conquistas disponíveis para você agora! :wink:"
+    beginning: "Aqui estão conquistas que você pode desbloquear:\n\n"
+
+    description: "Veja seu progresso em conquistas"
+
+  baltop:
+    server: "Os usuários com mais tokens em **%s**:\n"
+    global: "Os usuários com mais tokens globalmente:\n"
+    footer: "\nMostarndo %s usuários por página | Página %s\nVeja outra página com `%sbaltop %s<página>`."
+    globalView: "\nPara ver o placar global, tente `%sbaltop global`."
+    invalidPage: "Essa página não existe!"
+
+    description: "Mostra o placar de tokens."
+
   tokens:
     other: "%s tem 🔸 %s tokens"
     own: "Você tem 🔸 %s tokens\nGanhe mais:"
     winningMatches: "**Vencendo Partidas**"
     upvoteCan: "**Votando para o bot** (%s dias seguidos = + 🔸 %s tokens!)"
     upvoteLater: "~~Votando para o bot~~ (Você poderá fazê-lo novamente em %s)"
-    achievements: "**Completando conquistas:**\n"
-    noAchievements: "~~Completando conquistas~~ (Nenhuma conquista para completar)"
+    achievements2: "**Completando conquistas**: Veja seu progresso com `%sachievements`!"
     gamblingTokens: "**Apostando com** `g*slots`"
     gamblingNoTokens: "~~Apostando~~ (Balança menor ou igual a zero)"
 
